[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "lattice-graph-core"
version = "0.2.2"
description = "Simple Lattice/Graph Library"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
]
license = "Apache-2.0"
license-files = ["LICENSE-2.0.txt"]
authors = [
  { name = "Synge Todo" },
]
keywords = ["lattice", "graph", "physics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://github.com/todo-group/lattice"
Documentation = "https://github.com/todo-group/lattice/blob/main/docs/pypi.md"
Repository = "https://github.com/todo-group/lattice"
Issues = "https://github.com/todo-group/lattice/issues"

[tool.maturin]
manifest-path = "rust/lattice-python/Cargo.toml"
module-name = "lattice"
bindings = "pyo3"
include = [
  { path = "README.md", format = "sdist" },
  { path = "docs/**/*.md", format = "sdist" },
  { path = "python/tests/**/*.py", format = "sdist" },
]
