set(PROGS ising construct1 construct2 construct3 construct4)
foreach(name ${PROGS})
  add_executable(${name} ${name}.cpp)
  target_link_libraries(${name} lattice)
endforeach(name)

if(Boost_FOUND)
  set(PROGS construct_xml)
  foreach(name ${PROGS})
    add_executable(${name} ${name}.cpp)
    target_link_libraries(${name} lattice Boost::boost)
  endforeach(name)
  file(COPY lattices.xml DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
endif()
