set(PROGS basis coloring extent unitcell supercell graph)
foreach(name ${PROGS})
  set(target_name test_${name})
  add_executable(${target_name} ${name}.cpp)
  set_target_properties(${target_name} PROPERTIES OUTPUT_NAME ${name})
  target_link_libraries(${target_name} lattice gtest_main)
  add_test(${name} ${name})
endforeach(name)

if(Boost_FOUND)
  set(PROGS basis_xml unitcell_xml graph_xml)
  foreach(name ${PROGS})
    set(target_name test_${name})
    add_executable(${target_name} ${name}.cpp)
    set_target_properties(${target_name} PROPERTIES OUTPUT_NAME ${name})
    target_link_libraries(${target_name} lattice Boost::boost gtest_main)
    add_test(${name} ${name})
  endforeach(name)
endif()
