[package]
name = "lattice-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Simple Lattice/Graph Library"
repository = "https://github.com/todo-group/lattice"
readme = "../../README.md"
keywords = ["lattice", "graph", "physics"]

[dependencies]
nalgebra = { version = "0.33", default-features = false, features = ["std"] }
roxmltree = "0.20"
