[package]
name = "lattice-ffi"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"
description = "C ABI for lattice-core XML compatibility"
repository = "https://github.com/todo-group/lattice"
readme = "../../README.md"
keywords = ["lattice", "ffi", "graph"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lattice-core = { version = "0.1.0", path = "../lattice-core" }
